k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Windows\system32\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/elixer: "true"
        io.kompose.service: app
    spec:
      containers:
      - image: bmcclure89/elixerdemo:latest
        imagePullPolicy: Never
        name: app
        ports:
        - containerPort: 4000
        resources: {}
        workingDir: /src
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
