k8s/elixer-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elixer
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/elixer: "true"
  podSelector:
    matchLabels:
      io.kompose.network/elixer: "true"
